# ai-design-team

./: .dockerignore  .gitignore  Dockerfile  Procfile  README.md  app.py  pyproject.toml  requirements.txt  start.sh
.cache/fontconfig/: 3830d5c3ddfd5cd38a049b759396e72e-x86_64.cache-9  4c599c202bc5c08e2d34565a40eac3b2-x86_64.cache-9  7ef2298fde41cc6eeb7af42e48b7d293-x86_64.cache-9  d589a48862398ed80a3d6066f4f56f4c-x86_64.cache-9
.cache/matplotlib/: fontlist-v390.json
.cache/nix/: binary-cache-v6.sqlite
.streamlit/: config.toml
styles/: custom.css
