[project]
name = "multimodaldesignstudio"
version = "0.1.0"
description = "AI Design Team powered by Google Gemini"
requires-python = ">=3.10"
dependencies = [
    "google-generativeai>=0.8.3",
    "matplotlib>=3.7.1",
    "networkx>=3.1",
    "openai>=1.0.0",
    "streamlit>=1.21.0",
    "streamlit-lottie>=0.0.3",
    "plotly>=5.13.0",
    "pandas>=1.5.3",
    "requests>=2.28.2"
]

[tool.setuptools]
py-modules = []

[project.scripts]
start = "streamlit run app.py --server.address=0.0.0.0 --server.port=8080 --server.enableWebsocketCompression=false --server.enableXsrfProtection=false --server.enableCORS=false"
